--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,6 +34,7 @@ android {
 
     lintOptions {
         disable 'InvalidPackage'
+        checkReleaseBuilds false
     }
 
     defaultConfig {
@@ -50,6 +51,28 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+        }
+    }
+
+    flavorDimensions "app"
+
+    productFlavors {
+        develop {
+            dimension "app"
+            resValue "string", "app_name", "Drogo Libro (dev)"
+            applicationId "com.pixie.drogoLibro.dev"
+            versionNameSuffix "-dev"
+        }
+        staging {
+            dimension "app"
+            resValue "string", "app_name", "Drogo Libro (stg)"
+            applicationId "com.pixie.drogoLibro.stg"
+            versionNameSuffix "-stg"
+        }	
+        product {
+            dimension "app"
+            resValue "string", "app_name", "Drogo Libro"
+            applicationId "com.pixie.drogoLibro"
         }
     }
 }
