--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_analytics: ^5.0.15
 
 
   # The following adds the Cupertino Icons font to your application.
