--- a/ios/Runner.xcodeproj/xcshareddata/xcschemes/develop.xcscheme
+++ b/ios/Runner.xcodeproj/xcshareddata/xcschemes/develop.xcscheme
@@ -50,6 +50,12 @@
             ReferencedContainer = "container:Runner.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRDebugEnabled&#10;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Profile-develop"
