--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: drogoLibro
+name: drogo_libro
 description: A userful application for your taking medicines on your health.
 
 # The following line prevents the package from being accidentally published to
@@ -24,7 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_analytics: ^5.0.15
-
+  provider: ^4.1.3
+  get_it: ^4.0.2
+  http: ^0.12.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
