--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   get_it: ^4.0.2
   http: ^0.12.1
   passcode_screen: ^1.2.0
+  intl: ^0.16.1
+  flutter_cupertino_date_picker: ^0.8.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
