--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,9 @@ dependencies:
   passcode_screen: ^1.2.0
   intl: ^0.16.1
   flutter_cupertino_date_picker: ^0.8.0
-
-
+  keyboard_visibility: any
+  loading_overlay: ^0.2.1
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
