--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_cupertino_date_picker: ^0.8.0
   keyboard_visibility: any
   loading_overlay: ^0.2.1
+  flutter_slidable: ^0.5.5
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
