--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   url_launcher: ^5.5.0
   csv: ^4.0.3
   shared_preferences: ^0.5.10
+  package_info: ^0.4.3
+  encrypt: ^4.0.2
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
