--- a/ios/Runner.xcodeproj/xcshareddata/xcschemes/product.xcscheme
+++ b/ios/Runner.xcodeproj/xcshareddata/xcschemes/product.xcscheme
@@ -31,7 +31,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug-product"
+      buildConfiguration = "Release-product"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
